--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "cors-anywhere": "^0.4.4",
     "graphql": "^15.4.0",
     "leaflet": "^1.7.1",
     "leaflet-map": "^0.2.1",
