--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "graphql": "^15.4.0",
     "leaflet": "^1.7.1",
     "leaflet-map": "^0.2.1",
+    "netlify-cli": "^3.26.1",
     "ol": "^6.5.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
