--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "leaflet-map": "^0.2.1",
     "netlify-cli": "^3.26.1",
     "ol": "^6.5.0",
+    "qrcode": "^1.4.4",
+    "qrcode.react": "^1.0.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
